Creacion del archivo JSON con sus respectivas canciones y conexion por medio de XMLHttpRequest

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li><a href="">Rock</a></li>
             </ul>
         </div>
+        <button onclick="cargaDatos()">holaaaaaa</button>
 
         <!-- CONTENIDO DE TEXTO PARA EL USUARIO -->
         <div>
@@ -58,7 +59,7 @@
                     <p class="descripcion-genero">La mejor música para escuchar y bailar</p>
                 </div>
             </div>
-            <div class="contenedor-lista-reproduccion">
+            <div onclick="cargaDatos()" class="contenedor-lista-reproduccion">
                 <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Amarillo</p>
                 <p class="nombre-artista">J Balvin</p>
@@ -136,7 +137,7 @@
             </div>
             <div class="contenedor-lista-reproduccion">
                 <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
-                <p class="nombre-cancion">Ere mía</p>
+                <p class="nombre-cancion">Eres mía</p>
                 <p class="nombre-artista">Romeo Santos</p>
                 <p class="duracion">4:52</p>
             </div>
@@ -312,7 +313,7 @@
                             </div> 
                         </div>
                     </div>
-                    
+
                     <div class="contenedor-siguiente">
                         <img class="siguiente" src="./assets/iconos/siguiente.png" width="40" height="40" alt="">
                     </div>
