Quedan listas reproduciendo todas las canciones con las que empezara la app utilizando asyncronismo

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 <li><a href="">Rock</a></li>
             </ul>
         </div>
-        <button onclick="cargaDatos()">holaaaaaa</button>
+        <!--<button onclick="cargaDatos()">holaaaaaa</button>-->
+        
 
         <!-- CONTENIDO DE TEXTO PARA EL USUARIO -->
         <div>
@@ -60,25 +61,31 @@
                 </div>
             </div>
             <div onclick="cargaDatos()" class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id1" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Amarillo</p>
                 <p class="nombre-artista">J Balvin</p>
                 <p class="duracion">2:45</p>
+
+                <audio id="sonido" controls>
+                    <source src="" type="audio/mpeg">
+                    Soporte de audio
+                </audio>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id2" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Hawuai</p>
                 <p class="nombre-artista">Maluma</p>
                 <p class="duracion">3:18</p>
+
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id3" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Mix Reggaeton</p>
                 <p class="nombre-artista">Varios artistas</p>
                 <p class="duracion">8:00</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id4" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Otro trago</p>
                 <p class="nombre-artista">Sech</p>
                 <p class="duracion">3:50</p>
@@ -98,25 +105,25 @@
                 </div>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id5" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Dezco ascend</p>
                 <p class="nombre-artista">Official audio</p>
                 <p class="duracion">3:20</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id6" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Electrónica mix</p>
                 <p class="nombre-artista">Electrónica mix</p>
                 <p class="duracion">8:50</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id7" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Que paso te asustate</p>
                 <p class="nombre-artista">Dj Pilin electronic</p>
                 <p class="duracion">2:43</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id8" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Played a live</p>
                 <p class="nombre-artista">Safri Duo</p>
                 <p class="duracion">3:12</p>
@@ -136,25 +143,25 @@
                 </div>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id9" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Eres mía</p>
                 <p class="nombre-artista">Romeo Santos</p>
                 <p class="duracion">4:52</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id10" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Escuchame</p>
                 <p class="nombre-artista">José Fonseca</p>
                 <p class="duracion">4:16</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id11" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">La Bachata</p>
                 <p class="nombre-artista">Manuel Turizo</p>
                 <p class="duracion">2:42</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id12" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Necio</p>
                 <p class="nombre-artista">Romeo Santos</p>
                 <p class="duracion">4:24</p>
@@ -174,25 +181,25 @@
                 </div>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id13" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">No voy a llorar</p>
                 <p class="nombre-artista">Los diablitos</p>
                 <p class="duracion">4:43</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id14" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">No sé pedir perdon</p>
                 <p class="nombre-artista">Rafael Orozco</p>
                 <p class="duracion">4:42</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id15" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Si no me falla el corazón</p>
                 <p class="nombre-artista">Los diablitos</p>
                 <p class="duracion">4:53</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id16" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Tu asencia</p>
                 <p class="nombre-artista">Pedro Arroyo</p>
                 <p class="duracion">4:40</p>
@@ -212,25 +219,25 @@
                 </div>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id17" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Cómo te hago entender</p>
                 <p class="nombre-artista">Roberto Roena</p>
                 <p class="duracion">5:44</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id18" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Deseandote</p>
                 <p class="nombre-artista">Frankie Ruiz</p>
                 <p class="duracion">3:31</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id19" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Ni siquiera</p>
                 <p class="nombre-artista">Antonio Cartagena</p>
                 <p class="duracion">5:01</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id20" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Una mirada basto</p>
                 <p class="nombre-artista">Grupo Niche</p>
                 <p class="duracion">5:31</p>
@@ -250,25 +257,25 @@
                 </div>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id21" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">ACDC rock N roll</p>
                 <p class="nombre-artista">ACDC rock N roll</p>
                 <p class="duracion">4:19</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id22" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">LMFAO party rock</p>
                 <p class="nombre-artista">Anthem ft Lauren Bennett</p>
                 <p class="duracion">6:15</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id23" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Lordi hard rock</p>
                 <p class="nombre-artista">Hallelujah</p>
                 <p class="duracion">3:07</p>
             </div>
             <div class="contenedor-lista-reproduccion">
-                <img class="icono-play" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
+                <img class="icono-play" id="id24" src="./assets/iconos/icono-play.png" width="30" height="30" alt="">
                 <p class="nombre-cancion">Sol y Luna</p>
                 <p class="nombre-artista">Akash</p>
                 <p class="duracion">3:45</p>
